// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox 1`] = `
<div style="display: grid; gap: 2rem;">
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="sm-default"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="sm-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="sm-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="sm-disabled"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="sm-disabled-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        disabled
        id="<removed>"
        name="sm-disabled-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="sm-invalid"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="sm-invalid-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="sm-invalid-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="sm-read-only"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="sm-read-only-checked"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="sm-read-only-indeterminate"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="md-default"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="md-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="md-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="md-disabled"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="md-disabled-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        disabled
        id="<removed>"
        name="md-disabled-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="md-invalid"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="md-invalid-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="md-invalid-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="md-read-only"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="md-read-only-checked"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="md-read-only-indeterminate"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1rem;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="lg-default"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="lg-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="lg-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="lg-disabled"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="lg-disabled-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        disabled
        id="<removed>"
        name="lg-disabled-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="lg-invalid"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="lg-invalid-checked"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="lg-invalid-indeterminate"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid indeterminate
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="lg-read-only"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="lg-read-only-checked"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        data-indeterminate="true"
        id="<removed>"
        name="lg-read-only-indeterminate"
        readonly
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only indeterminate
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Controlled 1`] = `
<div style="display: flex; gap: var(--ds-size-2); align-items: end; width: 100%;">
  <ds-field>
    <label
      data-weight="medium"
      for="<removed>"
    >
      Fullt navn
    </label>
    <input
      aria-invalid="false"
      id="<removed>"
      type="text"
      value
    >
  </ds-field>
  <button
    data-variant="secondary"
    type="button"
  >
    Tøm feltet
  </button>
</div>
`;

exports[`Html Size 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Input with size
  </label>
  <input
    aria-invalid="false"
    id="<removed>"
    size="10"
    type="text"
  >
</ds-field>
`;

exports[`Input Types 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Checkbox
  </label>
  <input
    aria-invalid="false"
    checked
    id="<removed>"
    type="checkbox"
  >
</ds-field>
<ds-field data-clickdelegatefor="<removed>">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Radio
  </label>
  <input
    aria-invalid="false"
    checked
    id="<removed>"
    type="radio"
  >
</ds-field>
<ds-field data-clickdelegatefor="<removed>">
  <label
    data-weight="medium"
    for="<removed>"
  >
    Switch
  </label>
  <input
    aria-invalid="false"
    checked
    id="<removed>"
    role="switch"
    type="checkbox"
  >
</ds-field>
`;

exports[`Preview 1`] = `
<input
  aria-invalid="false"
  aria-label="input"
  checked
  name="inputs"
  type="text"
>
`;

exports[`Radio 1`] = `
<div>
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Small
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="sm-Default"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="sm-Checked"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="sm-Disabled"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="sm-Disabled"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="sm-Invalid"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="sm-Invalid"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="sm-Read-only"
        readonly
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="sm-Read-only"
        readonly
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Medium
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="md-Default"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="md-Checked"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="md-Disabled"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="md-Disabled"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="md-Invalid"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="md-Invalid"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="md-Read-only"
        readonly
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="md-Read-only"
        readonly
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1; margin-top: 16px;"
    >
      Large
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="lg-Default"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="lg-Checked"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="lg-Disabled"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="lg-Disabled"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="lg-Invalid"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="lg-Invalid"
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="lg-Read-only"
        readonly
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="lg-Read-only"
        readonly
        type="radio"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Switch 1`] = `
<div style="display: grid; gap: 2rem;">
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="sm-default"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="sm-checked"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="sm-disabled"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="sm-disabled-checked"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="sm-read-only"
        readonly
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="sm-read-only-checked"
        readonly
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="md-default"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="md-checked"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="md-disabled"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="md-disabled-checked"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="md-read-only"
        readonly
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="md-read-only-checked"
        readonly
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="lg-default"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="lg-checked"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        disabled
        id="<removed>"
        name="lg-disabled"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        disabled
        id="<removed>"
        name="lg-disabled-checked"
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled checked
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        id="<removed>"
        name="lg-read-only"
        readonly
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
    </ds-field>
    <ds-field data-clickdelegatefor="<removed>">
      <input
        aria-invalid="false"
        checked
        id="<removed>"
        name="lg-read-only-checked"
        readonly
        role="switch"
        type="checkbox"
      >
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only checked
      </label>
    </ds-field>
  </div>
</div>
`;

exports[`Text 1`] = `
<div>
  <div
    data-size="sm"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Small
    </h2>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
      <input
        aria-invalid="false"
        data-size="sm"
        id="<removed>"
        name="sm-default"
        type="text"
        value="Value"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
      <input
        aria-invalid="false"
        data-size="sm"
        disabled
        id="<removed>"
        name="sm-disabled"
        type="text"
        value="Value"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
      <input
        aria-describedby="<removed>"
        aria-invalid="true"
        data-size="sm"
        id="<removed>"
        name="sm-invalid"
        type="text"
        value="Value"
      >
      <p
        data-field="validation"
        id="<removed>"
      >
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
      <input
        aria-invalid="false"
        data-size="sm"
        id="<removed>"
        name="sm-read-only"
        readonly
        type="text"
        value="Value"
      >
    </ds-field>
  </div>
  <div
    data-size="md"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Medium
    </h2>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
      <input
        aria-invalid="false"
        data-size="md"
        id="<removed>"
        name="md-default"
        type="text"
        value="Value"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
      <input
        aria-invalid="false"
        data-size="md"
        disabled
        id="<removed>"
        name="md-disabled"
        type="text"
        value="Value"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
      <input
        aria-describedby="<removed>"
        aria-invalid="true"
        data-size="md"
        id="<removed>"
        name="md-invalid"
        type="text"
        value="Value"
      >
      <p
        data-field="validation"
        id="<removed>"
      >
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
      <input
        aria-invalid="false"
        data-size="md"
        id="<removed>"
        name="md-read-only"
        readonly
        type="text"
        value="Value"
      >
    </ds-field>
  </div>
  <div
    data-size="lg"
    style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1rem; max-width: 90vw;"
  >
    <h2
      data-size="2xs"
      style="grid-column: 1 / -1;"
    >
      Large
    </h2>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Default
      </label>
      <input
        aria-invalid="false"
        data-size="lg"
        id="<removed>"
        name="lg-default"
        type="text"
        value="Value"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Disabled
      </label>
      <input
        aria-invalid="false"
        data-size="lg"
        disabled
        id="<removed>"
        name="lg-disabled"
        type="text"
        value="Value"
      >
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Invalid
      </label>
      <input
        aria-describedby="<removed>"
        aria-invalid="true"
        data-size="lg"
        id="<removed>"
        name="lg-invalid"
        type="text"
        value="Value"
      >
      <p
        data-field="validation"
        id="<removed>"
      >
        Feilmelding
      </p>
    </ds-field>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Read-only
      </label>
      <input
        aria-invalid="false"
        data-size="lg"
        id="<removed>"
        name="lg-read-only"
        readonly
        type="text"
        value="Value"
      >
    </ds-field>
  </div>
</div>
`;
